quiche-csbindgen.g.cs


        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_accept", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_conn* quiche_accept(byte* scid, nuint scid_len, byte* odcid, nuint odcid_len, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len, quiche_config* config);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_conn* quiche_connect(byte* server_name, byte* scid, nuint scid_len, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len, quiche_config* config);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_negotiate_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_negotiate_version(byte* scid, nuint scid_len, byte* dcid, nuint dcid_len, byte* @out, nuint out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_retry", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_retry(byte* scid, nuint scid_len, byte* dcid, nuint dcid_len, byte* new_scid, nuint new_scid_len, byte* token, nuint token_len, uint version, byte* @out, nuint out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_version_is_supported", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_version_is_supported(uint version);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_new_with_tls", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_conn* quiche_conn_new_with_tls(byte* scid, nuint scid_len, byte* odcid, nuint odcid_len, sockaddr* local, uint local_len, sockaddr* peer, uint peer_len, quiche_config* config, void* ssl, [MarshalAs(UnmanagedType.U1)] bool is_server);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_set_keylog_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_set_keylog_path(quiche_conn* conn, byte* path);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_set_qlog_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_set_qlog_path(quiche_conn* conn, byte* path, byte* log_title, byte* log_desc);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_set_session", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_set_session(quiche_conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_recv(quiche_conn* conn, byte* buf, nuint buf_len, quiche_recv_info* info);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send(quiche_conn* conn, byte* @out, nuint out_len, quiche_send_info* out_info);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send_quantum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_send_quantum(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_on_path(quiche_conn* conn, byte* @out, nuint out_len, sockaddr* from, uint from_len, sockaddr* to, uint to_len, quiche_send_info* out_info);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_send_quantum_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_send_quantum_on_path(quiche_conn* conn, sockaddr* local_addr, uint local_len, sockaddr* peer_addr, uint peer_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_recv(quiche_conn* conn, ulong stream_id, byte* @out, nuint buf_len, bool* fin, ulong* out_error_code);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_send(quiche_conn* conn, ulong stream_id, byte* buf, nuint buf_len, [MarshalAs(UnmanagedType.U1)] bool fin, ulong* out_error_code);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_priority(quiche_conn* conn, ulong stream_id, byte urgency, [MarshalAs(UnmanagedType.U1)] bool incremental);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_shutdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_shutdown(quiche_conn* conn, ulong stream_id, int direction, ulong err);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_capacity(quiche_conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_stream_readable(quiche_conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_readable_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_conn_stream_readable_next(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_writable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_writable(quiche_conn* conn, ulong stream_id, nuint len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_writable_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_conn_stream_writable_next(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_stream_finished", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_stream_finished(quiche_conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_stream_iter* quiche_conn_readable(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_writable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_stream_iter* quiche_conn_writable(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_max_send_udp_payload_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_max_send_udp_payload_size(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_timeout_as_nanos", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_timeout_as_nanos(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_timeout_as_millis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_timeout_as_millis(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_on_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_on_timeout(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_close", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_close(quiche_conn* conn, [MarshalAs(UnmanagedType.U1)] bool app, ulong err, byte* reason, nuint reason_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_trace_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_trace_id(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_source_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_source_id(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_source_ids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern quiche_connection_id_iter* quiche_conn_source_ids(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_connection_id_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_connection_id_iter_next(quiche_connection_id_iter* iter, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_connection_id_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_connection_id_iter_free(quiche_connection_id_iter* iter);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_destination_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_destination_id(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_application_proto", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_application_proto(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_peer_cert", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_peer_cert(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_session", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_session(quiche_conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_established", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_established(quiche_conn* conn);

        [DllImport(__DllName, EntryPoint = "csbindgen_quiche_conn_is_resumed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_resumed(quiche_conn* conn);
